Hotfix for a dubtrack bug where chat messages will linebreak in the middle of a word.

--- a/themes/plugtrack.css
+++ b/themes/plugtrack.css
@@ -310,6 +310,10 @@ button:hover {
 #chat .chat-container ul.chat-main li.chat-me-command-joined {
     color: #999;
 }
+#chat .chat-container ul.chat-main li .activity-row .text p {
+    word-break: break-word;
+    word-wrap: break-word;
+}
 
 /* Username Colors                      = = = = = = = = = = =*/
     /* Classes 
